<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="8dp"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/main_activity_explanation" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:text="@string/main_activity_warning"
        android:layout_marginBottom="8dp"/>

    <CheckBox
        android:id="@+id/main_activity_do_not_delete_wipe_file_checkbox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/main_activity_do_not_delete_wipe_file_checkbox"
        android:checked="true"
        android:layout_marginBottom="8dp"/>

    <Switch
        android:id="@+id/main_activity_keep_screen_on_switch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/main_activity_keep_screen_on_switch"
        android:onClick="keepScreenOnSwitchClicked"
        android:layout_marginBottom="8dp"/>

    <Button
        android:id="@+id/main_activity_start_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/main_activity_start_button"
        android:onClick="startWipeClicked"
        android:layout_marginBottom="8dp"/>

    <ProgressBar
        android:id="@+id/main_activity_wipe_progress_bar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:max="100"
        android:indeterminate="false"
        android:progress="0"
        android:visibility="invisible"/>

    <TextView
        android:id="@+id/main_activity_wipe_progress_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="textEnd"
        android:gravity="end"
        android:visibility="invisible"
        android:layout_marginBottom="8dp"/>

</LinearLayout>